# Scripts

./: README.md  _vimrc  install_vim.sh  vim_plugins.sh  vim_pugins..sh  vim_pugins.txt  vim_pulgins.sh
mac/: install_texlive.sh  mac_config.sh
red_hat/: fix_audio_microf_RHEL.txt
red_hat/10.1/: config_redhat.sh  config_ssh.sh  gvim_plugins.sh  packages.sh
red_hat/10.1/bk/: install_texlive.sh
red_hat/10.1/config_files/: _bashrc  _profile  eclipse.desktop
red_hat/10.1/config_files/my_templates/: CMakeLists.txt
ubuntu/: install_cmake.sh  install_vim_ubuntu.sh  ubuntun_config.sh
ubuntu/20/: _vimrc  config_ubuntu.sh  gvim.desktop  gvim_install.sh
ubuntu/22/: config  config_ubuntu.sh  gvim_plugins.sh  install_nerd_fonts.sh  install_texlive.sh  zotero.desktop
ubuntu/24/: 1.yaml  _profile  _vimrc  config  config_ssh.sh  config_ubuntu.sh  fpga_deps.sh  gvim_install.sh  install_nerd_fonts.sh  install_texlive.sh
ubuntu/24/config_files/: _bashrc  _profile
ubuntu_20/: _bashrc  _profile  _vimrc  config_ubuntu.sh  gvim.desktop  gvim_install.sh  gvim_plugins.sh  install_cmake.sh  install_vim_ubuntu.sh  petalinux_dependencies.sh  ubuntun_config.sh  vim_plugins.sh  vivado_dependencies.sh
ubuntu_20/my_templates/: makefile.latex
ubuntu_22/: _bashrc  _profile  _vimrc  config  config_ubuntu.sh  gvim_install.sh  gvim_plugins.sh  install_nerd_fonts.sh  intel_questa_dependencies.sh  petalinux_dependencies.sh  vivado_dependencies.sh
